examples/test/testpolicy3980.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3980
  namespace: namespace15
spec:
  podSelector:
    matchLabels:
      key21: value43
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key7: value15
      podSelector:
        matchLabels:
          key34: value19
          key25: value35
          key31: value0
